# hbar-v3

./: .gitignore  AGENTS.md  CITATION.cff  Dockerfile  HARDWARE.md  README.md  checkpoint_a_review.md  checkpoint_b_review.md  docker-compose.yml  environment.yml  gap_conflict_map.md  integration_map.md  opencode.json  paper.md  program.md  pyproject.toml  register.md  requirements.txt
archive/: FAILURE_MANIFEST.md
artifacts/: demo-links.md
artifacts/datasheets/: cogs.md  pcfg-set.md  scan.md
artifacts/model-cards/: frontier-model-baselines.md  hbar-transformer.md
code/sigma/: __init__.py
docs/: alert-log.md  claims-registry.md  drift-log.md  figure-alt-text.md  issue-compilation.md  link-audit.md  notation-registry.md
docs/adrs/: 0001-monorepo-structure.md  0002-markdown-source-with-pandoc.md  0003-claim-to-evidence-tracking.md  (+1 more)
documentation/: ARXIV_SUBMISSION_GUIDE.md  appendix_b_cognitive_extensions.tex  kaggle_submission_attention.md  kaggle_submission_executive.md  kaggle_submission_learning.md  kaggle_submission_metacognition.md  kaggle_submission_social.md  register.md  verification_report.md
experiments/: h-bar-experiment.ipynb  h-bar-v3-cognitive-evaluation-benchmark-suite.ipynb  kaggle-pilot-optimised.ipynb
hackathon/: generate_kaggle_payloads.py  track_attention.md  track_executive.md  track_learning.md  track_metacognition.md  track_social.md
paper/: Makefile  bibliography.bib  manuscript.tex  paper.md
scripts/: benchmark_pilot.py  generate_figures.py  monitor-pub.py  mre_sigma.py  smoke_test.py  verify_datasets.sh  verify_empirical_claims.py  verify_table5.py
tests/: test_config.py  test_ode.py
(+93 files in other folders)
