[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "sigma"
version = "3.0.0"
description = "Σ-Model V3.0+ — Schema Coherence Framework for AI Agents"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "[Anonymous]" },
]

dependencies = [
    "numpy>=2.0,<3.0",
    "scipy>=1.14,<2.0",
    "torch>=2.10,<3.0",
    "pyyaml>=6.0,<7.0",
    "tqdm>=4.60,<5.0",
    "matplotlib>=3.8,<4.0",
    "datasets>=2.20,<3.0",
    "seaborn>=0.13,<1.0",
    "pandas>=2.0,<3.0",
    "pyarrow>=14,<25",
    "triton>=3.0,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "pre-commit>=3.5",
    "pip-audit>=2.10",
    "jupyterlab>=4.0",
    "ipykernel>=6.0",
]
viz = [
    "plotly>=5.18,<6.0",
    "kaleido>=0.2.1,<1.0",
]

[project.scripts]
sigma-gen-supplement = "sigma.visualization.interactive:main_cli"
sigma-monitor-pub = "sigma.monitoring.pub:main"
sigma-monitor-frameworks = "sigma.monitoring.frameworks:main"
sigma-monitor-datasets = "sigma.monitoring.datasets:main"
sigma-monitor-social = "sigma.monitoring.social:main"
sigma-monitor-twitter = "sigma.monitoring.twitter:main"
sigma-monitor-report = "sigma.monitoring.report:main"
sigma-monitor-all = "sigma.monitoring:run_all"

[tool.setuptools.packages.find]
where = ["code"]
include = ["sigma*"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
